Add simple GPS between voivodeship cities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,24 @@
         "cinttypes": "cpp",
         "queue": "cpp",
         "deque": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "__errc": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__mutex_base": "cpp",
+        "__node_handle": "cpp",
+        "bitset": "cpp",
+        "clocale": "cpp",
+        "cstdarg": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "ios": "cpp",
+        "istream": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "optional": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp"
     }
 }
